--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
-    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.burst": "1.8.27",
+    "com.unity.collections": "2.5.7",
+    "com.unity.ide.visualstudio": "2.0.26",
+    "com.unity.inputsystem": "1.14.2",
+    "com.unity.render-pipelines.core": "17.2.0",
+    "com.unity.render-pipelines.universal": "17.2.0",
+    "com.unity.shadergraph": "17.2.0",
+    "com.unity.visualscripting": "1.9.9",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
