--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.burst": "1.8.27",
     "com.unity.collections": "2.5.7",
+    "com.unity.ide.rider": "3.0.39",
     "com.unity.ide.visualstudio": "2.0.26",
     "com.unity.inputsystem": "1.14.2",
     "com.unity.render-pipelines.core": "17.2.0",
